2005-10-27  Wim Taymans  <wim@fluendo.com>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_negotiate_format),
	(handle_sequence), (handle_slice), (gst_mpeg2dec_chain),
	(gst_mpeg2dec_src_query), (gst_mpeg2dec_change_state):
	Small cleanups in refcounting.

2005-10-26  Wim Taymans  <wim@fluendo.com>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_init),
	(gst_mpeg2dec_dispose), (gst_mpeg2dec_reset),
	(gst_mpeg2dec_alloc_buffer), (gst_mpeg2dec_negotiate_format),
	(handle_sequence), (handle_picture):
	* ext/mpeg2dec/gstmpeg2dec.h:
	Removed lots of dubious code.
	Handle flushing and seeking correctly. Still leaks though...

2005-10-24  Christian Schaller  <christian at fluendo dot com>

	* configure.ac: port over thomas plugin listing from base

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.9.4 ===

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* configure.ac:
	  Releasing 0.9.4, "Diplodocus"

2005-10-23  Julien MOUTTE  <julien@moutte.net>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_loop): STOPPED->FAILED

2005-10-21  Wim Taymans  <wim@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_validate_offset),
	(gst_rmdemux_perform_seek), (gst_rmdemux_src_query):
	Set correct stream time in newsegment event.

2005-10-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/Makefile.am:
	  fix distcheck

2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/a52dec/Makefile.am:
	* ext/a52dec/gsta52dec.c: (gst_a52dec_base_init),
	(gst_a52dec_class_init), (gst_a52dec_sink_event),
	(gst_a52dec_change_state):
	* ext/a52dec/gsta52dec.h:
	  Re-enable CPU flags, use liboil to get them.

2005-10-20  Josef Zlomek  <josef dot zlomek at xeris dot cz>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* ext/a52dec/Makefile.am:
	* ext/a52dec/gsta52dec.c:
	* ext/a52dec/gsta52dec.h:
	  Port AC3 decoder to 0.9 (#318849).
