@@ -1,5 +1,15 @@
 2005-10-27  Wim Taymans  <wim@fluendo.com>
 
+	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_reset),
+	(gst_mpeg2dec_alloc_buffer), (gst_mpeg2dec_negotiate_format),
+	(handle_sequence), (handle_picture), (handle_slice),
+	(gst_mpeg2dec_chain), (gst_mpeg2dec_src_query), (normal_seek),
+	(gst_mpeg2dec_src_event), (gst_mpeg2dec_change_state):
+	Forward GstFlowReturn about everywhere.
+	Handle seeking correctly.
+
+2005-10-27  Wim Taymans  <wim@fluendo.com>
+
 	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_negotiate_format),
 	(handle_sequence), (handle_slice), (gst_mpeg2dec_chain),
 	(gst_mpeg2dec_src_query), (gst_mpeg2dec_change_state):
